Working on kinds Utils..remove all kind utils and use builder